[package]
name = "scutiger"
version = "0.0.1"
authors = ["brian m. carlson <sandals@crustytoothpaste.net>"]

[dependencies]
clap = "^2.32"
pcre2 = "^0.1"
libc = "^0.2"
# We don't require any sort of network connectivity, so don't bother building
# it.
git2 = { version = "0.6.5", default-features = false }
# These are pinned here for compatibility with Rust 1.24.
libgit2-sys = "0.6.11"
libz-sys = "= 1.0.13"

[dev-dependencies]
tempfile = "3"
