[package]
name = "scutiger-bin"
version = "0.0.1"
authors = ["brian m. carlson <sandals@crustytoothpaste.net>"]

[dependencies]
clap = "^2.32"
pcre2 = "^0.1"
libc = "^0.2"
# We don't require any sort of network connectivity, so don't bother building
# it.
git2 = { version = "0.13", default-features = false }
pkg-config = "^0.3"
scutiger-core = { path = "../scutiger-core", version = "0.0.1" }

[dev-dependencies]
tempfile = "3"
