[package]
name = "scutiger-bin"
version = "0.0.1"
authors = ["brian m. carlson <sandals@crustytoothpaste.net>"]
description = "a set of Git utilities for people who use Git a lot"
repository = "https://github.com/bk2204/scutiger"
license = "MIT"
license-file = "../LICENSE"
include = [
    "src/**/*.rs",
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
    "LICENSE",
]

[dependencies]
clap = "^2.32"
pcre2 = "^0.1"
libc = "^0.2"
# We don't require any sort of network connectivity, so don't bother building
# it.
git2 = { version = "0.13", default-features = false }
pkg-config = "^0.3"
scutiger-core = { path = "../scutiger-core", version = "0.0.1", features = ["pcre"] }

[dev-dependencies]
tempfile = "3"
