[package]
name = "scutiger-core"
version = "0.0.1"
authors = ["brian m. carlson <sandals@crustytoothpaste.net>"]

[dependencies]
pcre2 = "^0.1"
git2 = { version = "0.6.5", default-features = false }
# These are pinned here for compatibility with Rust 1.24.
libgit2-sys = "0.6.11"
libz-sys = "= 1.0.13"
pkg-config = "= 0.3.14"

[dev-dependencies]
tempfile = "3"
