[package]
name = "scutiger-core"
version = "0.3.0"
authors = ["brian m. carlson <sandals@crustytoothpaste.net>"]
description = "a set of shared functionality for the other Scutiger crates"
repository = "https://github.com/bk2204/scutiger"
license = "MIT"
license-file = "../LICENSE"
include = [
    "src/**/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]
rust-version = "1.63"

[dependencies]
pcre2 = { version = "^0.2.3", optional = true }
git2 = { version = "0.16", default-features = false }
pkg-config = "^0.3"

[dev-dependencies]
tempfile = "3"

[features]
pcre = ["pcre2"]
