[package]
name = "scutiger-lfs"
version = "0.0.1"
authors = ["brian m. carlson <sandals@crustytoothpaste.net>"]

[dependencies]
bytes = "0.4"
clap = "^2.32"
digest = "0.9"
hex = "0.4"
pcre2 = "^0.1"
git2 = { version = "0.13", default-features = false }
pkg-config = "^0.3"
libc = "^0.2"
scutiger-core = { path = "../scutiger-core", version = "0.0.1" }
sha2 = "0.9"
tempfile = "3"

[dev-dependencies]
pretty_assertions = "0.6"
