[package]
name = "scutiger-lfs"
version = "0.3.0"
authors = ["brian m. carlson <sandals@crustytoothpaste.net>"]
description = "a set of Git LFS-related utilities"
repository = "https://github.com/bk2204/scutiger"
license = "MIT"
license-file = "../LICENSE"
include = [
    "src/**/*.rs",
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
    "LICENSE",
]
rust-version = "1.41.1"

[lib]
name = "scutiger_lfs"
path = "src/lib.rs"

[[bin]]
name = "git-lfs-transfer"
path = "src/bin/git-lfs-transfer.rs"

[dependencies]
bytes = "0.4"
clap = "^2.32"
digest = "0.9"
hex = "0.4"
git2 = { version = "0.13", default-features = false }
pkg-config = "^0.3"
libc = "^0.2"
scutiger-core = { path = "../scutiger-core", version = "0.3.0", features = [] }
sha2 = "0.9"
tempfile = "3"
chrono = "^0.4"

[target.'cfg(unix)'.dependencies]
passwd = "0.0"

[dev-dependencies]
pretty_assertions = "0.6"
